graph get/set events

--- a/www/index.html
+++ b/www/index.html
@@ -6,10 +6,16 @@
     <title>LTc Status</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <!-- <link rel="stylesheet" href="https://raw.github.com/shutterstock/rickshaw/master/rickshaw.min.css" media="screen"> -->
     <link rel="stylesheet" href="/r/screen.css" media="screen">
 
     <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.js"></script>
+
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <!-- <script src="https://raw.github.com/shutterstock/rickshaw/master/vendor/d3.layout.min.js"></script> -->
+    <script src="https://raw.github.com/shutterstock/rickshaw/master/rickshaw.min.js"></script>
+
     <script src="/r/status.js"></script>
   </head>
   <body>
@@ -34,6 +40,11 @@
         </tr>
       </tbody>
     </table>
+
+    <!-- <div id="eventsChartContainer"> -->
+    <!--     <div id="eventsYAxis"></div> -->
+        <div id="eventsChart"></div>
+    <!-- </div> -->
 
     <h3>Log</h3>
     <ul id="log" data-bind="foreach: log">
