better styling for log

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
     <h3>Log</h3>
     <ul id="log" data-bind="foreach: log">
       <li class="logItem">
-        <time data-bind="text: prettyTime, attr: { datetime: time }"></time>
+        <span class="time"><time data-bind="text: prettyTime, attr: { datetime: time }"></time></span>
         <span class="operation" data-bind="text: operation, css: { getBackground: operation == 'get', setBackground: operation == 'set' }"></span>
         <span class="target" data-bind="text: target"></span>
       </li>
