--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,13 @@
       <li class="logItem">
         <span class="time"><time data-bind="text: prettyTime, attr: { datetime: time }"></time></span>
         <span class="operation" data-bind="text: operation, css: { getBackground: operation == 'get', setBackground: operation == 'set' }"></span>
-        <span class="target" data-bind="text: target"></span>
+        <span class="target">
+          <span data-bind="text: target"></span>
+          <span data-bind="if: operation == 'set'">
+            →
+            <span data-bind="text: valueDigest"></span>
+          </span>
+        </span>
       </li>
     </ul>
   </body>
