events graph is exactly the document width

--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,9 @@
     <script src="/r/status.js"></script>
   </head>
   <body>
-    <h1>LTc Status</h1>
+    <header>
+      <h1>LTc Status</h1>
+    </header>
 
     <h3>Events</h3>
     <div id="eventsBox">
@@ -44,7 +46,7 @@
 
       <!-- <div id="eventsChartContainer"> -->
       <!--     <div id="eventsYAxis"></div> -->
-      <div id="eventsChart"></div>
+      <div id="eventsGraph"></div>
       <!-- </div> -->
     </div>
 
