download online resources

--- a/www/index.html
+++ b/www/index.html
@@ -6,15 +6,15 @@
     <title>LTc Status</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <!-- <link rel="stylesheet" href="https://raw.github.com/shutterstock/rickshaw/master/rickshaw.min.css" media="screen"> -->
+    <link rel="stylesheet" href="/r/rickshaw.min.css" media="screen">
     <link rel="stylesheet" href="/r/screen.css" media="screen">
 
-    <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.js"></script>
+    <script src="/r/knockout-2.2.1.js"></script>
+    <script src="/r/mootools-yui-compressed.js"></script>
 
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="/r/d3.v3.min.js"></script>
     <!-- <script src="https://raw.github.com/shutterstock/rickshaw/master/vendor/d3.layout.min.js"></script> -->
-    <script src="https://raw.github.com/shutterstock/rickshaw/master/rickshaw.min.js"></script>
+    <script src="/r/rickshaw.min.js"></script>
 
     <script src="/r/status.js"></script>
   </head>
