prettify event graph

--- a/www/index.html
+++ b/www/index.html
@@ -65,10 +65,10 @@
         </tbody>
       </table>
 
-      <!-- <div id="eventsChartContainer"> -->
-      <!--     <div id="eventsYAxis"></div> -->
-      <div id="eventsGraph"></div>
-      <!-- </div> -->
+      <div id="eventsGraphContainer">
+          <div id="eventsYAxis"></div>
+          <div id="eventsGraph"></div>
+      </div>
     </div>
 
     <h3>Log</h3>
